--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
     <title>TODO list</title>
@@ -21,8 +21,8 @@
 
         <div class="tasks"> </div>
     </main>
-    
-    <script src="app.js"></script>
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
